--- a/tasks/minimize_access.yml
+++ b/tasks/minimize_access.yml
@@ -20,6 +20,7 @@
     recurse: 'yes'
   when: item.stat.isdir
   with_items: '{{ minimize_access_directories.results }}'
+  ignore_errors: yes
 
 - name: change shadow ownership to root and mode to 0600 | os-02
   file:
